Fix Scoped{List,Dictionary}Updates for non-empty defaut values

If a PrefService has a registered preference whose default value is a non-empty
dictionary or list, then the Scoped*Update functions failed to clone those
dictionaries. This is fixed by this CL.

Bug: 921542
Change-Id: Ifad622d6345dd6797fa97ac6c2f917eb3928cb98
Reviewed-on: https://chromium-review.googlesource.com/c/1408969
Commit-Queue: Dominic Battré <battre@chromium.org>
Reviewed-by: Jan Wilken Dörrie <jdoerrie@chromium.org>
Reviewed-by: Dominic Battré <battre@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622465}
Former-commit-id: 904348e9fd097685b80273f1149c17035533eac4